manifests/infrastructure/gateway-api/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx
  namespace: default
spec:
  controllerName: gateway.nginx.org/nginx-gateway-controller
