manifests/infrastructure/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: jwtlab.local
  - name: https
    protocol: HTTPS
    port: 443
    hostname: jwtlab.local
    tls:
      mode: Terminate
      certificateRefs:
        - kind: Secret
          group: ""
          name: my-gateway-tls

  - name: http-keycloak
    protocol: HTTP
    port: 80
    hostname: keycloak.demo.local
    allowedRoutes:
      namespaces:
        from: All
  - name: https-keycloak
    protocol: HTTPS
    port: 443
    hostname: keycloak.demo.local
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - kind: Secret
          group: ""
          name: keycloak-gateway-tls

  - name: http-oidc
    protocol: HTTP
    port: 80
    hostname: oidclab.local
    allowedRoutes:
      namespaces:
        from: All
  
  - name: https-oidc
    protocol: HTTPS
    port: 443
    hostname: oidclab.local
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - kind: Secret
          group: ""
          name: oidclab-gateway-tls
